# pomodoro_API

./: .env  .env.template  .gitignore  Makefile  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_02_21_0715-109591f3bb65_initial.py
api_v1/: __init__.py
api_v1/categories/: crud.py  dependencies.py  schemas.py  views.py
api_v1/tasks/: crud.py  dependencies.py  schemas.py  views.py
api_v1/users/: crud.py  dependencies.py  schemas.py  views.py
core/: config.py  database_manager.py  settings.py
core/models/: __init__.py  base.py  category.py  ormbasemodel.py  ormcategorymodel.py  ormtaskmodel.py  ormusermodel.py  task.py  user.py
tasks/: views.py
